--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -19,7 +19,7 @@
                         <div class="box-title mb-30">
                             <h2 class="fs-20">Don't have an account yet?</h2>
                         </div>
-                        <form class="m-0 sky-form" action="#" method="post" novalidate>
+                        <form class="m-0 sky-form" action="#" method="post" enctype="multipart/form-data" novalidate>
                             {% csrf_token %}
                             <fieldset id="one">
                                 <div class="row">
@@ -178,9 +178,7 @@
         </div>
     </section>
     <!-- /REGISTER -->
-{#<div class="container form">#}
-{#    <form action="{% url 'signUp' %}" enctype="multipart/form-data" method="POST">#}
-{#        <div class="row">#}
+
 {#            <div class="col-sm-4">#}
 {#                <label for="dob">#}
 {#                    Date of Birth#}
@@ -203,127 +201,8 @@
 {#                    </div>#}
 {#                </div>#}
 {#            </div>#}
-{#            <div class="col-sm-4 col-sm-offset-4">#}
-{#                <div class="form-group required" style="display: inline-block">#}
-{#                    <label for="gender">Gender</label>#}
-{#                    <span>*</span>#}
-{#                    {{form.gender}}#}
-{#                    {% if form.gender.errors %}#}
-{#                      {% for error in form.gender.errors %}#}
-{#                      <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                      {% endfor %}#}
-{#                    {% endif %}#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="row">#}
-{#            <div class="col-sm-8">#}
-{#                <div class="row">#}
-{#                    <div class="col-sm-6">#}
-{#                        <div class="form-group required">#}
-{#                            <label for="client_id_type">Client ID(Type)</label>#}
-{#                            {{form.type}}#}
-{#                            {% if form.type.errors %}#}
-{#                              {% for error in form.type.errors %}#}
-{#                              <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                              {% endfor %}#}
-{#                            {% endif %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                    <div class="col-sm-6">#}
-{#                        <div class="form-group required">#}
-{#                            <label for="client_id">ID No.</label>#}
-{#                            {{form.id}}#}
-{#                            {% if form.id.errors %}#}
-{#                              {% for error in form.id.errors %}#}
-{#                              <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                              {% endfor %}#}
-{#                            {% endif %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col-sm-6">#}
-{#                        <div class="form-group required">#}
-{#                            <label for="email">Email</label>#}
-{#                            <span>*</span>#}
-{#                            {{form.id}}#}
-{#                            {% if form.email.errors %}#}
-{#                              {% for error in form.email.errors %}#}
-{#                              <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                              {% endfor %}#}
-{#                            {% endif %}#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="row">#}
-{#                    <div class="col-sm-6">#}
-{#                        <label for="mobile">Mobile Number</label>#}
-{#                        <span>*</span>#}
-{#                        {{form.phone}}#}
-{#                        {% if form.phone.errors %}#}
-{#                          {% for error in form.phone.errors %}#}
-{#                          <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                          {% endfor %}#}
-{#                        {% endif %}#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-sm-4">#}
-{#                <div class="">#}
-{#                    <div class="form-group required">#}
-{#                        <label>Upload scanned copy of ID</label>#}
-{#                        <input type="file" id="id_file" value="Upload scanned copy of ID" class="form-control" required/>#}
-{#                        <div class="image-crop">#}
-{#                            <div id="upload-btn">#}
-{#                                <div class="btn btn-primary upload-file-btn">#}
-{#                                    <span class="btn-text">Choose File</span>#}
-{#                                    {{form.image}}#}
-{#                                    {% if form.image.errors %}#}
-{#                                      {% for error in form.image.errors %}#}
-{#                                      <div class="alert alert-danger"><strong>{{ error|escape }}</strong></div>#}
-{#                                      {% endfor %}#}
-{#                                    {% endif %}#}
-{#                                </div>#}
-{#                                <div class="btn btn-primary save-btn">Save</div>#}
-{#                            </div>#}
-{#                            <div class="card crop-card">#}
-{#                                <div class="card-block">#}
-{#                                    <div class="image-wrap d-flex justify-content-center align-items-center">#}
-{#                                        <canvas id="canvas" height="200"></canvas>#}
-{#                                    </div>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{#        <div class="row">#}
-{#            <div class="col-sm-4">#}
-{#                <div class="form-group">#}
-{#                    <label for="bot_cds">BOT CDS Account</label>#}
-{#                    <input type="text" id="bot_cds" class="form-control"/>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="col-sm-4">#}
-{#                <div class="form-group">#}
-{#                    <label for="dse_cds">DSE CDS Account</label>#}
-{#                    <input type="text" id="dse_cds" class="form-control"/>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="row">#}
-{#            <div class="col-sm-4">#}
-{#                <div class="form-group">#}
-{#                    <input type="submit" value="Create Account" id="create-account" class="btn btn-success"/>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </form>#}
-{#</div>#}
 
+    {% include 'modals.html' %}
 {% endblock %}
 
 {% block scripts %}
