--- a/fimco/fimcosite/static/css/main.css
+++ b/fimco/fimcosite/static/css/main.css
@@ -89,3 +89,10 @@ ul.process-steps li a.active, ul.process-steps li a.active:focus, ul.process-ste
     letter-spacing:2px !important;
     font-size: 21px !important;
 }
+
+@media screen and (max-height: 1024px) {
+    #slide-230-layer-9 {
+        min-width: 500px;
+        max-width: 500px;
+    }
+}
